# playground-cmake

./: .gitignore  CMakeLists.txt  README.md
elementary/: CMakeLists.txt
workbench/custom_build_ffmpeg/: CMakeLists.txt  README.md
workbench/custom_build_ffmpeg/src/: ffmpeg_hello.c
workbench/custom_command_target/: README.md
workbench/custom_command_target/p01/: CMakeLists.txt
workbench/find_x/: README.md
workbench/find_x/p01/: CMakeLists.txt
workbench/google_test/: README.md
workbench/libcurl_hello/: CMakeLists.txt  README.md  curl_hello.cpp
workbench/obs_whip_demo/: curl_hello.cpp
